// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Author /> component > should render the component in default state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader makeStyles-MuiList-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 e4ifo371 makeStyles-MuiTypography-root-StyledText"
        >
          sidebar.author.title
        </h6>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding e4ifo370 makeStyles-MuiListItem-root-AuthorListItem"
        >
          <a
            class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
            data-mui-internal-clone-element="true"
            data-testid="verdaccio user"
            href="mailto:verdaccio.user@verdaccio.org?subject=verdaccio v4.0.0"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular makeStyles-MuiAvatar-root"
            >
              <img
                alt="verdaccio user"
                class="MuiAvatar-img makeStyles-MuiAvatar-img"
                src="https://www.gravatar.com/avatar/000000"
              />
            </div>
          </a>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 makeStyles-MuiTypography-root"
          >
            verdaccio user
          </h6>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="MuiList-root MuiList-padding MuiList-subheader makeStyles-MuiList-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 e4ifo371 makeStyles-MuiTypography-root-StyledText"
      >
        sidebar.author.title
      </h6>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding e4ifo370 makeStyles-MuiListItem-root-AuthorListItem"
      >
        <a
          class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
          data-mui-internal-clone-element="true"
          data-testid="verdaccio user"
          href="mailto:verdaccio.user@verdaccio.org?subject=verdaccio v4.0.0"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular makeStyles-MuiAvatar-root"
          >
            <img
              alt="verdaccio user"
              class="MuiAvatar-img makeStyles-MuiAvatar-img"
              src="https://www.gravatar.com/avatar/000000"
            />
          </div>
        </a>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 makeStyles-MuiTypography-root"
        >
          verdaccio user
        </h6>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Author /> component > should render the component when there is no author email 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader makeStyles-MuiList-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 e4ifo371 makeStyles-MuiTypography-root-StyledText"
        >
          sidebar.author.title
        </h6>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding e4ifo370 makeStyles-MuiListItem-root-AuthorListItem"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular makeStyles-MuiAvatar-root"
            data-mui-internal-clone-element="true"
            data-testid="verdaccio user"
          >
            <img
              alt="verdaccio user"
              class="MuiAvatar-img makeStyles-MuiAvatar-img"
              src="https://www.gravatar.com/avatar/000000"
            />
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 makeStyles-MuiTypography-root"
          >
            verdaccio user
          </h6>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="MuiList-root MuiList-padding MuiList-subheader makeStyles-MuiList-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 e4ifo371 makeStyles-MuiTypography-root-StyledText"
      >
        sidebar.author.title
      </h6>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding e4ifo370 makeStyles-MuiListItem-root-AuthorListItem"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular makeStyles-MuiAvatar-root"
          data-mui-internal-clone-element="true"
          data-testid="verdaccio user"
        >
          <img
            alt="verdaccio user"
            class="MuiAvatar-img makeStyles-MuiAvatar-img"
            src="https://www.gravatar.com/avatar/000000"
          />
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 makeStyles-MuiTypography-root"
        >
          verdaccio user
        </h6>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
